# go-fake-useragent

./: README.md  go.mod  main.go
.github/workflows/: publish-to-pypi.yml
cmd/c-wrapper/: main.go
python/: README.md  pyproject.toml  setup.py  test.py
python/py_fake_useragent/lib/: useragent.h
useragent/: bots.go  headers.go  useragent.go
